--- a/templates/include/navbar.html
+++ b/templates/include/navbar.html
@@ -1,31 +1,28 @@
 {% load static %}
 
-<!-- Fixed navbar -->
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" >
-    <div class="container-fluid" >
-      <img style="padding: 0px 4px;" src="{% static "img/header.jpg" %}" height = "60" >
-      <!-- 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      -->
-      
-      <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark px-4 ml-4" >
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+        <a href="{% url "main_page" %}" ><img src="{% static "img/header4.png" %}" style="height: 45px;"></a>
+        <div class="row">
+                <div class="col-auto mx-lg-0 text-center">
+                        <a class="nav-link text-light py-0" aria-current="page" href="{% url "main_page" %}">Новые вопросы</a>
+                        <a class="nav-link text-light py-0" aria-current="page" href="{% url "hot" %}">Лучшие вопросы</a>
+                </div>
+        </div>
+        <ul class="navbar-nav me-auto mx-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url "main_page" %}">Новые вопросы</a>
+            <form class="form-inline mt-2 mt-md-0">
+                <input type="text" placeholder="Поиск">
+                <button class="btn btn-outline-light my-2 my-sm-0">↵</button>
+            </form>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="{% url "hot" %}">Лучшие вопросы</a>
+            <a class="mx-2" href="{% url "ask" %}"><button class="btn btn-warning mx-2" type="submit">Задать вопрос</button></a>
           </li>
-           <li class="nav-item">
-            <a class="mx-4" href="{% url "ask" %}"><button class="btn btn-warning" type="submit">Задать вопрос</button></a>
-          </li>
-        </ul>
-        
+        </ul>  
+    </div>  
+
         {% block auth_block %}
         {% endblock auth_block %}
-
-      </div>
-    </div>
+    
 </nav>
