--- a/templates/include/one_answer.html
+++ b/templates/include/one_answer.html
@@ -1,7 +1,4 @@
 {% load static %}
-{% comment %} <link href= "{% static "css/bootstrap.min.css" %}" rel="stylesheet">
-<link href="{% static "css/mycss.css" %}" rel="stylesheet"> {% endcomment %}
-
 
   <div class="row pt-3 pb-0 px-3 row-eq-height border border-secondary">
       <div class="col-3 bg-light p-2">
@@ -14,13 +11,14 @@
   </div>
 
   <div class="row bg-secondary p-2 mb-2 d-flex justify-content-between">
-  {% comment %} d-flex justify-content-between {% endcomment %}
       <div class="col-3 text-center">
-        <div class="btn-group" role="group" aria-label="Basic example">
-          <button type="button btn-sm" class="btn btn-outline-light">&#9650</button>
-          <button type="button btn-sm" class="btn btn-outline-light">{{answer.likes}}</button>
-          <button type="button btn-sm" class="btn btn-outline-light">&#9660</button>
-        </div>
+        <row>
+          <span>🤍 {{question.likes}}</span>
+          <div class="btn-group" role="group">
+            <button type="button btn-sm" class="btn btn-outline-light">⮟</button>
+            <button type="button btn-sm" class="btn btn-outline-light">⮝</button>
+          </div>
+        </row>
       </div>
       <div class="col-auto">
 
