--- a/templates/tag.html
+++ b/templates/tag.html
@@ -9,9 +9,10 @@
 {% block content %}
 
   
-    {% for question in questions %}
+    {% for question in cards %}
       {% include "include/one_question.html" %}
     {% endfor %}
   
-
+    {% include "include/pagination.html" %}
+    
 {% endblock content %}
