--- a/templates/user_question.html
+++ b/templates/user_question.html
@@ -1,13 +1,13 @@
 {% extends "include/base.html"%}
 
 {% block content-header %}
-    Лучшие вопросы
+    Вопросы от {{user.name}}
 {% endblock content-header %}
 
 {% block content %}
 
-  {% for question in questions %}
+  {% for question in cards %}
     {% include "include/one_question.html" %}
   {% endfor %}
-
+  {% include "include/pagination.html" %}
 {% endblock content %}
