--- a/templates/user_question.html
+++ b/templates/user_question.html
@@ -1,7 +1,7 @@
 {% extends "include/base.html"%}
 
 {% block content-header %}
-    Вопросы от {{user.name}}
+    Вопросы от {{user.user.username}}
 {% endblock content-header %}
 
 {% block content %}
