--- a/templates/include/base.html
+++ b/templates/include/base.html
@@ -6,14 +6,17 @@
     <title>index.html</title>
 
     <link href= "{% static "css/bootstrap.min.css" %}" rel="stylesheet">
-    <link href= "{% static "css/bootstrap-theme.min.css" %}" rel="stylesheet">
     
 </head>
 
 <body class="d-flex flex-column h-100 bg-light m-5" bg>
 
 <header >
-    {% include "include/user_navbar.html" %}
+    {% if request.user.is_authenticated %}
+        {% include "include/user_navbar.html" %}
+    {% else %}
+        {% include "include/guest_navbar.html" %}
+    {% endif %}
 </header>
 
 <main class="flex-shrink-0 bg-light" style="padding-top:40px;">
