--- a/templates/include/one_question.html
+++ b/templates/include/one_question.html
@@ -3,11 +3,12 @@
 
   <div class="row pt-3 pb-0 px-3 row-eq-height border border-secondary">
       <div class="col-3 bg-light p-2">
-        <a href="{% url "user_question" pk=question.user_id %}"><img src="{% static "img/avatars/def.jpg" %}" style="width:100%" class="p-2"></a>
+        <a href="{% url "user_question" pk=question.author.id %}"><img src="{% static "img/avatars/def.jpg" %}" style="width:100%" class="p-2"></a>
+        <p class="text-center text-truncate" style="max-width: 90%;"><a href="{% url "user_question" pk=question.author.id %}" class="text-dark" style="text-decoration: none;">{{question.author.user.username}}</a></p>
       </div>
       <div class="col-9">
             <h3>  <a href="{% url "one_question" pk=question.id %}" class="text-dark d-inline-block text-truncate" style="text-decoration: none; max-width: 100%;">{{question.title}}</a>  </h3>
-            <p class="text-dark">  {{question.shown_text}} </p>
+            <p class="text-dark text-wrap">  {{question.text| truncatewords:13}} </p>
 
       </div>    
   </div>
@@ -15,7 +16,7 @@
   <div class="row bg-secondary px-2 pb-1 pt-2 mb-2 d-flex justify-content-between">
       <div class="col-auto text-center text-light">
         <row>
-          <span style="text-light">🤍 {{question.likes}}</span>
+          <span style="text-light">🤍 {{question.rating}}</span>
           <div class="btn-group" role="group">
             <button type="button btn-sm" class="btn btn-outline-light">⮟</button>
             <button type="button btn-sm" class="btn btn-outline-light">⮝</button>
@@ -24,12 +25,15 @@
       </div>
       <div class="col-7 mt-1">
         <p>
-          {% for tag in question.tags %}
+          {% for tag in question.tags.all|slice:":3" %}
             <span class="bg-info rounded border-info px-2 pb-2 pt-2"><a href="{% url "tag_page" name_of_tag=tag%}" class="text-dark"  style="text-decoration: none;" >{{tag}}</a></span>
           {% endfor %}
+          {% if question.tags.all|length > 3 %}
+            <span class="bg-info rounded border-info px-2 pb-2 pt-2"><a>...</a></span>
+          {% endif %}
         </p>
       </div>
       <div class="col-2 mt-1">
-          <p class="text-center text-truncate" style="max-width: 90%;"><a href="{% url "one_question" pk=question.id %}" class="text-dark" style="text-decoration: none;">Ответы ({{question.answers|length}})</a></p>
+          <p class="text-center text-truncate" style="max-width: 90%;"><a href="{% url "one_question" pk=question.id %}" class="text-dark" style="text-decoration: none;">Ответы ({{question.answers.all|length}})</a></p>
       </div>
   </div>
