--- a/templates/include/tags_right.html
+++ b/templates/include/tags_right.html
@@ -1,3 +1,4 @@
+{% comment %} <div class="position-fixed"> {% endcomment %}
 
 <div class="row p-2 bg-secondary" >
     <p class="text-center">Популярные теги</p>
@@ -6,7 +7,7 @@
             <li>
                 <div class = "row rounded bg-info py-1 mb-2 mx-2 position-relative">
                     <div class="col-9 text-truncate"> <a href="{% url "tag_page" name_of_tag=tag.word %}" class="text-dark stretched-link" style="text-decoration: none" > {{tag.word}} </a> </div>
-                    <div class="col-3"> <span class="badge badge-pill bg-light text-dark">{{tag.questions_id|length}}</span> </div>
+                    <div class="col-3"> <span class="badge badge-pill bg-light text-dark">{{tag.questions.all|length}}</span> </div>
                 </div>
             </li>
         {% endfor %} 
@@ -16,7 +17,7 @@
 
 <div class="row p-2 bg-secondary mt-2" >
 
-    <p class="text-center pb-0">Активные пользователи</p>
+    <p class="text-center pb-0">Случайные пользователи</p>
 
     <ul class="list-group text-truncate">
         {% for user in best_users %}
@@ -29,3 +30,4 @@
     </ul>
 
 </div>
+{% comment %} </div> {% endcomment %}
