--- a/templates/question.html
+++ b/templates/question.html
@@ -1,5 +1,6 @@
 {% extends "include/base.html"%}
 {% load static %}
+{% load bootstrap4 %}
 
 {% block content-header %}
      {{question.title}}
@@ -8,11 +9,11 @@
 {% block content %}
 <div class="row pt-3 pb-0 px-3 row-eq-height">
       <div class="col-3 text-center bg-light p-2">
-        <a href="{% url "user_question" pk=question.user_id %}"><img src="{% static "img/avatars/def.jpg" %}" style="width:100%" class="p-2"></a>
-        <p class="text-center text-truncate" style="max-width: 90%;"><a href="{% url "user_question" pk=question.user_id %}" class="text-dark" style="text-decoration: none;">{{question.user}}</a></p>
+        <a href="{% url "user_question" pk=question.author.id%}"><img src="{% static "img/avatars/def.jpg" %}" style="width:100%" class="p-2"></a>
+        <p class="text-center text-truncate" style="max-width: 90%;"><a href="{% url "user_question" pk=question.author.id %}" class="text-dark" style="text-decoration: none;">{{question.author.user.username}}</a></p>
 
         <div class="text-center text-dark">
-          <span style="text-light">🖤 {{question.likes}}</span>
+          <span style="text-light">🖤 {{question.rating}}</span>
           <div class="btn-group" role="group">
             <button type="button btn-sm" class="btn btn-outline-dark">⮟</button>
             <button type="button btn-sm" class="btn btn-outline-dark">⮝</button>
@@ -20,28 +21,27 @@
         </div>
       </div>
       <div class="col-9">
-            <h3><a href="{% url "one_question" pk=question.id %}" class="text-dark d-inline-block text-truncate" style="text-decoration: none; max-width: 100%;">{{question.title}}</a>  </h3>
             <p class="text-dark">  {{question.text}} </p>
             <p>
-              {% for tag in question.tags %}
+              {% for tag in question.tags.all %}
                 <span class="bg-info rounded border-info text-brand-info px-2 pb-2 pt-1 "><a href="{% url "tag_page" name_of_tag=tag%}" class="text-dark"  style="text-decoration: none;" >{{tag}}</a></span>
               {% endfor %}
             </p>
       </div>    
 </div>
 
-<button class="btn btn-warning mb-2 invisible" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="true" aria-controls="collapseExample">
-    Ответить
-  </button>
-
-<div class="collapse show mb-2 justify-content-center" id="collapseExample">
-  <div class="row mb-2" >
-      <div class="col-12"><textarea class="form-control" rows="3" placeholder="Здесь вы можете ввести ответ на вопрос"></textarea></div>
-  </div>
-  <button class="btn btn-warning mb-2 visible" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="true" aria-controls="collapseExample">
-    Ответить
-  </button>
-</div>
+{% if request.user.is_authenticated %}
+<div class="row mb-2" >
+    <form novalidate class="form mt-5" action="{% url "one_question" pk=question.id%}" method="post"> 
+      {% csrf_token %}
+      {% bootstrap_form form %}
+      <input type="hidden" name="next" value="{{ request.GET.next }}"/>
+      {% buttons %}
+        <button class="btn btn-lg btn-warning btn-block my-3" type="submit">Ответить</button>
+      {% endbuttons %}
+    </form>
+  </div>  
+{% endif %}
 
 {% for answer in cards %}
     {% include "include/one_answer.html" %}
