--- a/templates/settings.html
+++ b/templates/settings.html
@@ -9,45 +9,30 @@
 <div class="row mb-2" >
       <div class="col-3"><label for="inputEmail" class="sr-only mb-3">Адрес e-mail</label></div>
       <div class="col-auto">
-        <input id="inputEmail" class="mb-2" placeholder="{{this_user.email}}" required autofocus>
-        <p class="text-danger d-none"><small>Неверно введен e-mail</small></p>
+        <p>{{request.user.email}}</p>
       </div>
 </div>
       
-<div class="row mb-2" >
-      <div class="col-3"><label for="inputNick" class="sr-only mb-3">Имя пользователя</label></div>
+<div class="row" >
+      <div class="col-3"><label for="inputNick" class="sr-only">Имя пользователя</label></div>
       <div class="col-auto">
-        <input id="inputNick" class="mb-2" placeholder="{{this_user.name}}" required>
-        <p class="text-danger d-none"><small>Недопустимое имя пользователя</small></p>
-      </div>
-</div>
-<div class="row mb-2" >
-      <div class="col-3"><label for="inputPassword" class="sr-only mb-3">Пароль</label></div>
-      <div class="col-auto">
-        <input type="password" id="inputPassword" class="mb-2" placeholder="Изменить пароль" required>
-        <p class="text-danger"><small>Слишком простой пароль</small></p>
-      </div>
-</div>
-<div class="row mb-2" >
-      <div class="col-3"><label for="repeatPassword" class="sr-only mb-3">Повторите пароль</label></div>
-      <div class="col-auto">
-        <input type="password" id="repeatPassword" class="mb-2" required>
-        <p class="text-danger d-none"><small>Введенные пароли не совпадают</small></p>
+        <p>{{request.user.username}}</p>
       </div>
 </div>
 
-<div class="row">
-    <div class="col-3 text-truncate">
-        <p style="text-truncate">Загрузить аватар<p>
-    </div>
-    <div class="col-auto">
-        <button type="button" class="btn btn-outline-warning">Загрузить файл</button>
-        <p class="text-danger d-none"><small>jpg или png с соотношением сторон 1:1</small></p>
-    </div>
-    <div class="col-auto">
-        <img src="{% static "img/avatars/def.jpg" %}" style="width:35px" class="visible">
-    </div>
-</div>
 
-<button class="btn btn-lg btn-warning btn-block mt-4" type="submit">Сохранить изменения</button>
+<button class="btn btn-lg btn-warning btn-block mt-4"><a href="{% url "edit" %}" class="text-dark" style="text-decoration: none;">Редактировать профиль</a></button>
+
+
+<div class="row mt-4" >
+<h3 class="col-auto pb-1" >Ваши вопросы</h3>
+</div>  
+
+<div class="row mb-2" >
+{% for question in cards %}
+  {% include "include/one_question.html" %}
+{% endfor %}
+{% include "include/pagination.html" %}
+</div>  
+
 {% endblock content %}
